--- a/index.html
+++ b/index.html
@@ -226,6 +226,43 @@
           </section>
 
           <!--Skills End-->
+
+          <!--Services Start-->
+          <section id="services">
+            <div class="container">
+              <div class="section-title">
+                <h3 class="text-center fw-bold main-title">My Services</h3>
+                <p class="text-center fw-bold ms-4 ps-3 sub-title" id="whatIKnow">What am I doing?</p>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 service-box text-center">
+                  <img src="images/web-tasarim.png" class="img-fluid mb-3" alt="web design">
+                  <h3 class="fw-bold mb-2">Web Design</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam 
+                    dignissimos delectus? Neque voluptatibus quos ullam possimus, eius unde!
+                     Quibusdam saepe voluptate eius quidem optio quisquam error voluptatem 
+                     beatae. Dolorem.</p>
+                </div>
+                <div class="col-lg-4 service-box text-center">
+                  <img src="images/Grafik-tasarim.png" class="img-fluid mb-3" alt="web design">
+                  <h3 class="fw-bold mb-2">Web Design</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam 
+                    dignissimos delectus? Neque voluptatibus quos ullam possimus, eius unde!
+                     Quibusdam saepe voluptate eius quidem optio quisquam error voluptatem 
+                     beatae. Dolorem.</p>
+                </div>
+                <div class="col-lg-4 service-box text-center">
+                  <img src="images/seo.png" class="img-fluid mb-3" alt="web design">
+                  <h3 class="fw-bold mb-2">Web Design</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quibusdam 
+                    dignissimos delectus? Neque voluptatibus quos ullam possimus, eius unde!
+                     Quibusdam saepe voluptate eius quidem optio quisquam error voluptatem 
+                     beatae. Dolorem.</p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!--Services End-->
         <!--Typed JS-->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!--Bootstrap JS-->
