--- a/index.html
+++ b/index.html
@@ -263,6 +263,51 @@
             </div>
           </section>
           <!--Services End-->
+
+          <!--Portfolio Start-->
+          <section id="portfolio">
+            <div class="container">
+              <div class="section-title">
+                <h3 class="text-center fw-bold main-title">My portfolio</h3>
+                <p class="text-center fw-bold ms-4 ps-5 sub-title">What did I do?</p>
+              </div>
+              <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gy-3">
+                <div class="col">
+                  <img src="images/work1.jpg" alt="" class="gallery-item image-fluid">
+                </div>
+                <div class="col">
+                  <img src="images/work2.jpg" alt="" class="gallery-item image-fluid">
+                </div>
+                <div class="col">
+                  <img src="images/work3.jpg" alt="" class="gallery-item image-fluid">
+                </div>
+                <div class="col">
+                  <img src="images/work4.jpg" alt="" class="gallery-item image-fluid">
+                </div>
+                <div class="col">
+                  <img src="images/work5.jpg" alt="" class="gallery-item image-fluid">
+                </div>
+                <div class="col">
+                  <img src="images/work6.jpg" alt="" class="gallery-item image-fluid">
+                </div>
+              </div>
+            </div>
+          </section>
+          <!--Modal-->
+          <div class="modal fade" id="gallery-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="images/work1.jpg" alt="" class="modal-img img-fluid">
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Portfolio End-->
         <!--Typed JS-->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!--Bootstrap JS-->
