--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
         <!--About Me End-->
 
           <!--Skills Start-->
-
           <section id="skills">
             <div class="container">
               <div class="section-title">
@@ -308,6 +307,46 @@
             </div>
           </div>
           <!--Portfolio End-->
+
+          <!--Contact Start-->
+          <section id="contact">
+            <div class="container">
+              <div class="section-title">
+                <h3 class="text-center fw-bold main-title">CONTACT</h3>
+                <p class="text-center fw-bold ms-2 ps-5 sub-title">Contact Me</p>
+              </div>
+              <div class="row gx-5">
+                <div class="col-lg-6 text-center">
+                  <div class="contact-bg d-flex flex-column justify-content-center rounded-2">
+                    <h5 class="py-3">You can contact me from the dialogue box</h5>
+                    <div class="contact-info d-flex flex-column gap-2 text-center">
+                      <a href="tel:+51923326348" class="text-white"><i class="bi bi-telephone-fill me-3"></i>+51 923 326 348</a>
+                      <a href="mailto:vquijandria@gmail.com" class="text-white"><i class="bi bi-envelope-fill me-3"></i>vquijandria@gmail.com</a>
+                      <a href="#" class="text-white"><i class="bi bi-geo-alt-fill me-3"></i>Lima/Peru</a>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 mt-4">
+                  <form>
+                    <div class="mb-3">
+                      <input type="text" class="form-control" id="Name" placeholder="Your Name and Surname">
+                    </div>
+                    <div class="mb-3">
+                      <input type="email" class="form-control" id="email" placeholder="Your Email Address">
+                    </div>
+                    <div class="mb-3">
+                      <input type="text" class="form-control" id="subject" placeholder="Subject">
+                    </div>
+                    <div class="mb-3">
+                      <textarea class="form-control" placeholder="Enter Your Message" id="floatingTextarea" rows="8"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!--Contact End-->
         <!--Typed JS-->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!--Bootstrap JS-->
