--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary shadow" id="mainNavbar">
             <div class="container">
-              <a class="navbar-brand" href="#" id="nombre">Vicente <span id="apellido">Quijandria</span></a>
+              <a class="nombre navbar-brand" href="#">Vicente <span class="apellido">Quijandria</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="bi bi-list text-white fs-1" ></span>
               </button>
@@ -347,6 +347,27 @@
             </div>
           </section>
           <!--Contact End-->
+          <!--Footer Start-->
+          <footer class="mt-5">
+            <div class="container">
+              <div class="footer-logo text-center">
+                <a href="#" class="nombre">Vicente <span class="apellido">Quijandria</span></a>
+              </div>
+              <div class="footer-social d-flex justify-content-center gap-3 text-center mt-3">
+                <a href="" class="text-white"><i class="bi bi-facebook"></i></a>
+                <a href="" class="text-white"><i class="bi bi-twitter"></i></a>
+                <a href="" class="text-white"><i class="bi bi-github"></i></a>
+                <a href="" class="text-white"><i class="bi bi-facebook"></i></a>
+                <a href="" class="text-white"><i class="bi bi-facebook"></i></a>
+              </div>
+              <div class="footer-copyright text-center mt-3 mt-lg">
+                <p>Copyright 2023 | Powered by Vicente Quijandria</p>
+              </div>
+            </div>
+          </footer>
+          <!--Footer End-->
+
+          
         <!--Typed JS-->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!--Bootstrap JS-->
