--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Vicente Quijandria Portfolio Website</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <body>
         <!--Header Start-->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow" id="mainNavbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow fixed-top" id="mainNavbar">
             <div class="container">
               <a class="nombre navbar-brand" href="#">Vicente <span class="apellido">Quijandria</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,19 +26,19 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About Me</a>
+                    <a class="nav-link" href="#about">About Me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#services">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link btn btn-primary" href="#">Contact</a>
+                    <a class="nav-link btn btn-primary" href="#contact">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -67,7 +67,7 @@
                              The point of using Lorem Ipsum is that it has a more-or-less
                               normal distribution of letters, 
                         </p>
-                        <a href="#" class="btn btn-primary me-2">Contact</a>
+                        <a href="#contact" class="btn btn-primary me-2">Contact</a>
                         <a href="#" class="btn btn-outline-primary px-4"> <i class="bi bi-arrow-down-circle-fill me-1"></i> CV</a>
 
                     </div>
@@ -142,7 +142,7 @@
               </div>
               <div class="row gap-3 justify-content-center">
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
+                  <img src="images/html.png" alt="html">
                   <h5>HTML</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
@@ -150,32 +150,32 @@
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/css.png" alt="html">
+                  <h5>CSS</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/bootstrap.png" alt="html">
+                  <h5>Bootstrap</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/react2.png" alt="html">
+                  <h5>React</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/react.png" alt="html">
+                  <h5>React</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
@@ -348,7 +348,7 @@
           </section>
           <!--Contact End-->
           <!--Footer Start-->
-          <footer class="mt-5">
+          <footer class="mt-5 py-5">
             <div class="container">
               <div class="footer-logo text-center">
                 <a href="#" class="nombre">Vicente <span class="apellido">Quijandria</span></a>
@@ -357,10 +357,9 @@
                 <a href="" class="text-white"><i class="bi bi-facebook"></i></a>
                 <a href="" class="text-white"><i class="bi bi-twitter"></i></a>
                 <a href="" class="text-white"><i class="bi bi-github"></i></a>
-                <a href="" class="text-white"><i class="bi bi-facebook"></i></a>
-                <a href="" class="text-white"><i class="bi bi-facebook"></i></a>
+                <a href="" class="text-white"><i class="bi bi-linkedin"></i></a>
               </div>
-              <div class="footer-copyright text-center mt-3 mt-lg">
+              <div class="footer-copyright text-center mt-3 mt-lg-2">
                 <p>Copyright 2023 | Powered by Vicente Quijandria</p>
               </div>
             </div>
