--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <div class="col-4 col-lg-2 text-center p-3 skill">
                   <img src="images/html.png" alt="html">
                   <h5>HTML</h5>
-                  <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-info" style="width: 50%">50%
+                  <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-info" style="width: 90%">90%
                     </div>
                   </div>                  
                 </div>
@@ -198,8 +198,8 @@
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/bootstrap2.png" alt="html">
+                  <h5>Bootstrap</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
