--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a href="https://github.com/vquijandria" target="_blank"> <i class="bi bi-github" id="logo3"></i></a>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/me3.png" alt="me" class="img-fluid mt-5 ms-lg-4" id="fotoMain">
+                    <img src="images/me4.png" alt="me" class="img-fluid mt-5 ms-lg-4" id="fotoMain">
                 </div>
                 <div class="col-md-7 d-flex flex-column justify-content-center">
                     <div class="hero-content px-lg-5">
@@ -87,7 +87,7 @@
     </div>
             <div class="row">
               <div class="col-md-12 col-lg-5">
-                <img src="images/me.png" alt="about me" class="img-fluid rounded-2" id="fotoAboutMe">
+                <img src="images/me5.jpg" alt="about me" class="img-fluid rounded-2" id="fotoAboutMe">
                 </div>
                 <div class="col-md-12 col-lg-7 gx-5 mt-3">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -166,8 +166,8 @@
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/react2.png" alt="html">
-                  <h5>React</h5>
+                  <img src="images/typescript2.png" alt="html">
+                  <h5>Typescript</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
@@ -182,40 +182,40 @@
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/mysql.png" alt="html">
+                  <h5>MySQL</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/nodejs.png" alt="html">
+                  <h5>node.js</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/bootstrap2.png" alt="html">
-                  <h5>Bootstrap</h5>
+                  <img src="images/c.png" alt="html">
+                  <h5>C</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/git.png" alt="html">
+                  <h5>Git</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
                   </div>                  
                 </div>
                 <div class="col-4 col-lg-2 text-center p-3 skill">
-                  <img src="images/ts.png" alt="html">
-                  <h5>HTML</h5>
+                  <img src="images/figma.png" alt="html">
+                  <h5>Figma</h5>
                   <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-info" style="width: 50%">50%
                     </div>
