--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                               normal distribution of letters, 
                         </p>
                         <a href="#contact" class="btn btn-primary me-2">Contact</a>
-                        <a href="#" class="btn btn-outline-primary px-4"> <i class="bi bi-arrow-down-circle-fill me-1"></i> CV</a>
+                        <a href="VICENTE_QUIJANDRIA_RESUME.pdf" download="computer" class="btn btn-outline-primary px-4"> <i class="bi bi-arrow-down-circle-fill me-1"></i> CV</a>
 
                     </div>
                 </div>
@@ -98,31 +98,31 @@
                     <div class="row mt-5 text-center exp">
                     <div class="col-6 col-lg-3">
                     <div class="d-flex justify-content-center">
-                      <h4 class="fw-boldu exp-number" data-val="4">0</h4>
+                      <h4 class="fw-boldu exp-number" data-val="2">0</h4>
                       <h5 class="mt-4 ps-1">+</h5>
                     </div>
-                    <p>experience</p>
+                    <p>Experience</p>
                 </div>
                 <div class="col-6 col-lg-3">
                   <div class="d-flex justify-content-center">
-                    <h4 class="fw-boldu exp-number" data-val="200">0</h4>
+                    <h4 class="fw-boldu exp-number" data-val="5">0</h4>
                     <h5 class="mt-4 ps-1">+</h5>
                   </div>
-                  <p>project</p>
+                  <p>Projects</p>
               </div>
               <div class="col-6 col-lg-3">
                 <div class="d-flex justify-content-center">
-                  <h4 class="fw-boldu exp-number" data-val="157">0</h4>
+                  <h4 class="fw-boldu exp-number" data-val="2">0</h4>
                   <h5 class="mt-4 ps-1">+</h5>
                 </div>
-                <p>customer</p>
+                <p>Customers</p>
             </div>
             <div class="col-6 col-lg-3">
               <div class="d-flex justify-content-center">
-                <h4 class="fw-boldu exp-number" data-val="13">0</h4>
+                <h4 class="fw-boldu exp-number" data-val="1">0</h4>
                 <h5 class="mt-4 ps-1">+</h5>
               </div>
-              <p>award</p>
+              <p>Awards</p>
           </div>
               </div>
               
@@ -272,7 +272,7 @@
               </div>
               <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gy-3">
                 <div class="col">
-                  <img src="images/work1.jpg" alt="" class="gallery-item image-fluid">
+                  <img src="images/marinus.png" alt="" class="gallery-item image-fluid">
                 </div>
                 <div class="col">
                   <img src="images/work2.jpg" alt="" class="gallery-item image-fluid">
@@ -297,7 +297,7 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">marinus.pe</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -327,18 +327,18 @@
                   </div>
                 </div>
                 <div class="col-lg-6 mt-4">
-                  <form>
+                  <form action="https://formsubmit.co/vquijandria@gmail.com" method="POST">
                     <div class="mb-3">
-                      <input type="text" class="form-control" id="Name" placeholder="Your Name and Surname">
+                      <input type="text" name="nombre" class="form-control" id="Name" placeholder="Your Name and Surname">
                     </div>
                     <div class="mb-3">
-                      <input type="email" class="form-control" id="email" placeholder="Your Email Address">
+                      <input type="email" name="mail" class="form-control" id="email" placeholder="Your Email Address">
                     </div>
                     <div class="mb-3">
-                      <input type="text" class="form-control" id="subject" placeholder="Subject">
+                      <input type="text" name="tema" class="form-control" id="subject" placeholder="Subject">
                     </div>
                     <div class="mb-3">
-                      <textarea class="form-control" placeholder="Enter Your Message" id="floatingTextarea" rows="8"></textarea>
+                      <textarea name="mensaje" class="form-control" placeholder="Enter Your Message" id="floatingTextarea" rows="8"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send</button>
                   </form>
@@ -371,6 +371,8 @@
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!--Bootstrap JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <!--SMTP JS-->
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
         <!--Main JS-->
         <script src="main.js"></script>
     </body>
